# existential-identity-test-engine

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  CONTRIBUTORS.md  DISCLAIMER.md  LICENSING.md  MEMORY.md  NOTICE.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SECURITY_AUDIT.md  anchor_server.py  apply_patches.py  beta.html  cognitive_layer.py  config.json  deploy.py  eite  fix_bench.py  gen_batch_4.py  gen_eite_zero.py  memory.db.bak.1783035125  nul  pyproject.toml  run_fast.py  run_inference.py  run_inference.sh  secure_runtime.sh  sessions.db.bak.1783035125  setup.py  setup_lite.py
.github/workflows/: ci.yml  cla.yml  publish.yml
bench_data/bfcl/: simple_test.json
benchmarks/: __init__.py  bench_base.py  bench_bfcl.py  bench_bfcl_override.py  bench_gaia.py  bench_tau.py  bench_terminal.py  bench_webarena.py  download_data.py  real_agent.py  run.py  test_benchmarks.py
cognitive_protocol/: __init__.py  hive.py  metabolism.py  protocol.py  signal.py
config/: default.json  mcp_servers.json  mcp_servers.json.example  mesh.json  mesh.json.example  providers.json  security.json  trading-config.json
constitution/templates/: assistant.yaml  creative.yaml  default.yaml  hive-aware.yaml  npc.yaml  trading.yaml
deploy/: deploy.py  gateway-guard.py  generate_worker.py  hermes-guard.py  install-service.sh  self-check.sh  tical-code-worker@.service  unified-worker@.service
docs/: comparison-v0.4.2.md  design-aesthetic-reference.md  full-guide.md  ib-setup-guide.md  lite-guide.md  scaling-architecture.md  security-checklist.md  tool-spec.md  x-account-operations.md  x-ai-requirements.md
eite-test/: run_all.py  trace_recorder.py
eite_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: trading_demo.py
identity/: __init__.py  decision_trace.py  habits.py  observer.py  test_ipt.py
results/: BFCL_v4_report.json  all_benchmarks_summary.json  tau2_bench_report.json
scripts/: autonomy_test.py  autonomy_test_v2.py  autonomy_test_v3.py  deploy.py  deploy_config.example.json  phase1_ai_selffix.py  run_worker.py  security_self_check.py  self_check.sh  self_heal.py  setup_vps.sh  sg_full_bench.py  start_trading.py  tical_guardian.py  zimage_gen.py
tests/: conftest.py  test_cloud_device.py  test_core.py  test_cron_scheduler.py  test_eval.py  test_hive.py  test_llm_interface.py  test_mcp_integration.py  test_memory_evolve.py  test_memory_store.py  test_model_router.py  test_search_memory.py  test_tool_router.py  test_trace.py  test_trading.py  test_v07.py  test_v3_dod.py  test_worker_integration.py  test_workflow.py
tical_code/: __init__.py  __init__.py.rej
tical_code/_deprecated/: README.md
tical_code/api/: __init__.py  eite_api.py  server.py
tical_code/cli/: __init__.py  config.py
tical_code/core/: LITE_README.md  MODULE_AUDIT.md  MODULE_STATUS.md  __init__.py  anchor.py  axioms.py  builtin_tools.py  capability_integrator.py  channel.py  checkpoint.py  checks.py  clarify.py  config.py  constitution.py  cron.py  decision_engine.py  delegate_light.py  delivery_ledger.py  (+67 more)
tools/: watermark.py
training_data/: collect_scenarios.py  eite_v3_scenarios.py  eite_v3_scenarios_batch2.json  eite_v3_scenarios_batch3.json  eite_v3_scenarios_batch5.json  eite_v3_scenarios_batch6.json  eite_v3_scenarios_batch7.json  eite_v3_scenarios_batch8.json  gen_50.py  gen_50_batch2.py  gen_50_batch3.py  gen_50_scenarios.py  gen_ani_kael_scenarios.py  gen_batch2.py  gen_batch3.py  gen_batch5.py  gen_batch6.py  gen_batch7.py  gen_batch8.py  gen_sg_scenarios.py  gen_test_scenarios.py  run_qwen_inference.py  sg_100_scenarios.json
(+59 files in other folders)
