[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "eite-agent"
# Auto-extracted by setuptools at build time — do not manually edit this line
# Single source of truth for version — read from here elsewhere
version = "0.1.3"
description = "AI Agent Evaluation Framework -- structured benchmarking, scenario-based testing, and honesty verification for AI agents."
readme = "README.md"
license = {text = "AGPL-3.0-only"}
authors = [
    {name = "tical-code Team", email = "team@tical-code.dev"}
]
keywords = ["ai", "agent", "deployment", "ssh", "automation", "verification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"

dependencies = [
    "click>=8.0.0",
    "paramiko>=2.10.0",
    "pyjwt>=2.6.0",
    "aiohttp>=3.8.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
lite = [
    "pyyaml>=6.0",
]
full = [
    "pyyaml>=6.0",
    # JSON Schema validation
    "jsonschema>=4.17.0",
    # RestrictedPython for sandboxing
    "RestrictedPython>=5.2",
    # Docker SDK for container sandbox
    "docker>=6.0.0",
    # Full-only dependencies
    "playwright>=1.30.0",
    "selenium>=4.0.0",
    "beautifulsoup4>=4.10.0",
    "requests>=2.28.0",
    "tweepy>=4.14.0",
    # Telegram bot (python-telegram-bot is the maintained option)
    "python-telegram-bot>=20.0.0",
    # Trading APIs
    "ib_insync>=0.9.50",
    # Vision
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "Pillow>=9.0.0",
    "pytesseract>=0.3.10",
    # Telegram bot
    "python-telegram-bot>=20.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "flake8>=4.0.0",
]
all = [
    "pyyaml>=6.0",
    "playwright>=1.30.0",
    "selenium>=4.0.0",
    "beautifulsoup4>=4.10.0",
    "requests>=2.28.0",
    "tweepy>=4.14.0",
    "python-telegram-bot>=20.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "flake8>=4.0.0",
]

[project.scripts]
tical = "tical_code.cli.commands:main"

[project.urls]
Homepage = "https://github.com/zizetu/existential-identity-test-engine"
Documentation = "https://github.com/zizetu/existential-identity-test-engine"
Repository = "https://github.com/zizetu/existential-identity-test-engine"
Changelog = "https://github.com/zizetu/existential-identity-test-engine/releases"

[tool.setuptools.packages.find]
include = ["tical_code*"]

[tool.setuptools.package-data]
tical_code = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "build", "dist"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E501", "W503"]
exclude = [".git", ".venv", "build", "dist"]